[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aocf = "0.1.21"
colored = "2.1.0"
hex_color = "3.0.0"
mut-binary-heap = "0.1.0"
nom = "7.1.3"
serde_json = "1.0.120"

[lib]
name = "aoc"
path = "src/aoc.rs"
